--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="topicText">Converter <span id="textToChange">℃ to ℉</span></h1>
     <div class="divValue">
       <input type="text" id="inputValue" placeholder="℃" />
-      <p id="result">test text</p>
+      <p  class="result-reset result" id="result">text</p>
     </div>
     <div class="buttonContainer">
       <button class="button" id="CONVERT">CONVERT</button>
